frontend/src/core/components/DefaultLayout/LoginStatus/LoginStatus.scss
@import "../../../../scss/Variables/DefaultLayout";

.user-dropdown {
  display: flex;

  .label-dropdown {
    display: inherit;
    justify-content: center;
    align-items: center;
    width: 160px;
    height: 32px;
    line-height: 31px;
    padding: 8px;
    border-radius: $default-border-radius;
    border-style: solid;
    border-width: 1px;

    span {
      @include font-style($user-login-font);
      color: map_get($user-login-font, color);
      line-height: 30px;

      text-transform: uppercase;
      margin-right: 8px;
    }

    svg {
      font-size: 8px;
    }
  }

  .label-dropdown:hover {
    text-decoration: none;
    background-color: aliceblue;
  }

  .dropdown-menu.show {
    margin-top: 1px;
    border-radius: $cta-panel-radius;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.24);
    background-color: white;

    .dropdown-item {
      font-family: $primary-font-family;
      font-size: 12px;
      font-weight: 300;
      color: #282828;

      .icon {
        color: $primary-color;
        margin-right: 15px;
        width: 16px;
        height: 16px;
      }
    }
  }
}

